[package]
name = "mp4-inspector"
version = "0.1.1"
authors = ["Alf <alf.g.jr@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version="0.2.67", features=["serde-serialize"] }
web-sys = { version="0.3.34", features=["console"]}
byteorder = "1.3.4"
serde = "^1.0.115"
serde_derive = "^1.0.115"
mp4 = { git = "https://github.com/alfg/mp4rs", branch = "master" }
# mp4 = "0.5.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.17"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
